# game_of_life

./: Cargo.toml
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json
