[package]
    name = "wasm-game-of-life"
    version = "0.1.0"
    authors = ["andrew.watkinz@gmail.com"]
    edition = "2018"

[lib]
    crate-type = ["cdylib", "rlib"]

console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies]
    wasm-bindgen = "0.2"
    rand = "0.3"

[dev-dependencies]
    wasm-bindgen-test = "0.2"

[profile.release]
    # Tell `rustc` to optimize for small code size.
    opt-level = "s"
